contrast fix

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -77,7 +77,7 @@ html {
 
 .blockLink {
     background-color: yellow;
-    color: $lightGrey;
+    color: $textPrimary;
     font-family: 'Overpass', sans-serif;
     font-size: $text_xs_body;
     font-weight: 200;
